# projectfarm-assets

./: .gitignore  README.md  install.py
data/: CMakeLists.txt  Functions.cmake
data/client/: CMakeLists.txt  config.json
data/client/fonts/: CMakeLists.txt  chatbox_text.txt  debuginfo.txt  fontlist.txt  loadingscreen.txt  small_text.txt  text.txt  title.txt
data/client/graphics/: CMakeLists.txt
data/client/graphics/materials/: CMakeLists.txt  Materials.json  single_texture.json  single_texture_with_mask.json  solid_color.json  solid_color_with_tex_coords.json  solid_color_with_tex_coords_with_mask.json
data/client/graphics/shaders/: CMakeLists.txt  Shaders.json
data/client/tilemaps/: CMakeLists.txt  tilemap.json
data/client/tilesets/: CMakeLists.txt  character_tileset.json  chicken0.json  chicken1.json  chicken2.json  chicken3.json  chicken4.json  chicken5.json  chicken6.json  chicken7.json  chicken8.json  chicken9.json  farmer0.json  farmer1.json  farmer10.json  farmer11.json  farmer12.json  farmer13.json  farmer14.json  farmer15.json  farmer16.json  farmer17.json  farmer18.json  farmer19.json  farmer2.json  farmer20.json  farmer21.json  farmer22.json  farmer3.json  farmer4.json  farmer5.json  farmer6.json  farmer7.json  farmer8.json  farmer9.json  test_tileset.json  tileset.json  tileset1.json  tileset2.json  tilesets.json
data/client/ui/: AuthenticateScreen.js  AuthenticateScreen.json  AuthenticateScreen.xcf  CMakeLists.txt  CustomControls.json  LoadingScreen.json  LoadingScreen.xcf  uis.json
data/client/ui/authenticate_screen/: AuthenticateScreen.json  CMakeLists.txt
data/client/ui/css/: CMakeLists.txt
data/client/ui/custom_controls/: CMakeLists.txt
data/client/ui/loading_screen/: CMakeLists.txt  LoadingScreen.json
data/client/ui/ui_textures/: CMakeLists.txt  MouseCursor.xcf  button.xcf  default_texture.xcf  textbox.xcf
data/client/ui/world_screen/: CMakeLists.txt  MenuBackground.xcf  WorldScreen.js  WorldScreen.json  buttonCloseGraphicsUI.js  buttonCloseMenu.js  buttonExitGame.js  buttonMenu.js  buttonShowDebugUI.js  debugUI.js  graphicsUI.js
data/dev/: CMakeLists.txt  startserver.bat  startserver.sh  stopserver.bat  stopserver.sh
data/server/: CMakeLists.txt  config.json
data/server/characters/: CMakeLists.txt  characters.json  chicken.json  farmer_male.json
data/server/databases/: CMakeLists.txt  create_player_database.sql  create_server_cache.sql  player_database_get_current_world_by_playerid.sql  player_database_get_hashed_password.sql  player_database_get_player_appearance.sql  player_database_get_player_load_details.sql  player_database_get_playerid_by_username.sql  player_database_get_pos_by_playerid.sql  player_database_insert_player.sql  player_database_update_player_appearance_details.sql  player_database_update_player_current_world.sql  player_database_update_player_login.sql  player_database_update_player_state.sql  server_cache_get_entity_appearance.sql  server_cache_insert_entity.sql  server_cache_update_entity.sql
data/server/scripts/: CMakeLists.txt
data/server/scripts/characters/: CMakeLists.txt  chicken.js
data/server/scripts/worlds/: CMakeLists.txt  test.js
data/shared/: CMakeLists.txt
data/shared/characters/: CMakeLists.txt  action_animations.json
data/shared/characters/chicken/: chicken_body-blue.json  chicken_body-white.json  chicken_feet-orange.json  chicken_feet-pink.json  chicken_hair-green.json  chicken_hair-red.json
data/shared/characters/farmer/: farmer_body-1.json  farmer_body-2.json  farmer_body-3.json  farmer_clothesbottom-1.json  (+11 more)
data/shared/scripting/: CMakeLists.txt
data/shared/worlds/: CMakeLists.txt  worlds.json
(+32 files in other folders)
